changed the home link to forward slash

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <div id="topNav">
         <ul class="nav-ul-2">
             <li style="text-decoration:none;display:inline;color:#000;margin-right:480px;" id="logo">ifunanya okolie</li>                
-            <li class="nav-li" ><a href="home.html">HOME</a></li>                   
+            <li class="nav-li" ><a href="/">HOME</a></li>                   
             <li class="nav-li"><a href="about.html">ABOUT</a></li>                   
             <li class="nav-li"><a href="contact.html">CONTACT</a></li>                   
             <li class="nav-li"><a href="portfolio.html">PORTFOLIO</a></li>                              
