--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <div id="topNav">
         <ul class="nav-ul-2">
             <li style="text-decoration:none;display:inline;color:#000;margin-right:480px;" id="logo">ifunanya okolie</li>
-            <li class="nav-li" ><a href="home.html">Home</a></li>                   
+            <li class="nav-li" ><a href="/">Home</a></li>                   
             <li class="nav-li"><a href="about.html">About</a></li>                   
             <li class="nav-li"><a href="contact.html">Contact</a></li>                   
             <li class="nav-li"><a href="portfolio.html">Portfolio</a></li>                              
