--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="topNavHome" style="display:block">
                 <h6 style="margin-left:100px;text-decoration: none; display:inline;position:absolute;"><a id="logo" href="www.linkedin.com/in/ifunanyaokolie">ifunanya okolie</a></h6>
             <ul class="nav-ul" style="position:relative;">
-                <li class="nav-li"><a href="home.html">Home</a></li>                   
+                <li class="nav-li"><a href="/">Home</a></li>                   
                 <li class="nav-li"><a href="about.html">About</a></li>                   
                 <li class="nav-li"><a href="contact.html">Contact</a></li>                   
                 <li class="nav-li"><a href="portfolio.html">Portfolio</a></li>                              
