--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
 
         <div id="topnavportfolio">
             <ul class="nav-ul-portfolio">
-                <li><a href="home.html">Home</a></li>                   
+                <li><a href="/">Home</a></li>                   
                 <li><a href="about.html">About</a></li>                   
                 <li><a href="contact.html">Contact</a></li>                   
                 <li><a class="active"href="portfolio.html">Portfolio</a></li>                              
